# Ry4ns-b0t

./: .env.example  .gitignore  README.md  pyproject.toml
ry4ns_bot/: __init__.py  __main__.py  bot.py  config.py  entertainment.py
tests/: test_bot.py  test_config.py  test_entertainment.py
